<resources>
    <string name="app_name">Carmon</string>
    <string name="notification_title">Carmon service</string>

    <string name="mqtt_url">MQTT broker URL</string>

    <string name="mqtt_username">Username</string>
    <string name="mqtt_password">Password</string>
    <string name="mqtt_clientid">Client ID</string>
    <string name="mqtt_keepalive">Keepalive</string>

    <string name="wake_schedule">Wake cron schedule</string>
    <string name="locate_schedule">Locate cron schedule</string>
    <string name="alarm_schedule">Alarm cron schedule</string>

    <string name="idle_timeout">Idle timeout, ms</string>
    <string name="gps_timeout">GPS timeout, ms</string>
    <string name="use_ntp">Use NTP time sync</string>

    <string name="btnSave">Save</string>
    <string name="btnLocate">Locate</string>
    <string name="btnSleep">Sleep</string>
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="btnConfig">Config</string>
    <string name="track_distance">Track distance</string>
    <string name="alert_distance">Alert move distance</string>
    <string name="use_compress">GZIP track data</string>
    <string name="use_tracking">Send track data</string>
    <string name="use_power_check">Don\'t sleep on charging</string>

</resources>
